Fixed few issues and now shifting focus to hero

--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,6 @@
 @media only screen and (hover: none) {
   .hero {
-    border-top-left-radius: 0.8rem;
+    border-top-left-radius: 1.4rem;
   }
 }
 
